--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -12,6 +12,7 @@ footer {
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
+        width: 100%;
 
         .row {
             width: 100%;
